# astviewer

./: .gitignore  CHANGES  HISTORY.md  LICENSE  README.md  README.txt  astview  astviewer.py  pyastviewer  pylintrc  pyproject.toml  setup.py
astviewer/: __init__.py  __main__.py  editor.py  iconfactory.py  main.py  misc.py  toggle_column_mixin.py  tree.py  version.py
astviewer/qtpy/: QtCore.py  QtGui.py  QtSvg.py  QtWidgets.py  __init__.py  compat.py  readme.txt
astviewer/qtpy/_patch/: qcombobox.py
testprogs/: invalid_highlights.py  mini.py
