
#[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"


[project]
name = "astviewer"
version = '1.1.3-dev'
description = 'GUI for viewing a Python Abstract Syntax Tree.'
readme = "README.md"

license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Pepijn Kenter", email = "titusjan@gmail.com"},
]
keywords = ["AST", "Abstract Syntax Tree", "GUI"]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Environment :: X11 Applications :: Qt',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Topic :: Adaptive Technologies',
    'Topic :: Software Development',
    'Topic :: Utilities',
]


requires-python = ">=3.8"
dependencies = [
    "pyqt5>=5.15.11",
]

[project.urls]
homepage = "https://github.com/titusjan/astviewer"
documentation = "https://github.com/titusjan/astviewer"  # No read-the-docs yet.
repository = "https://github.com/titusjan/astviewer.git"
changelog = "https://github.com/titusjan/astviewer/blob/master/HISTORY.rst"


[tool.uv]

required-environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'"
]


[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]

# Needed for flat-package layout. Otherwise, a src/libstools directory is expected.
module-root = ""

